--- a/test/MUXControlsTestApp/TAEF/MUXControlsTestApp.TAEF.csproj
+++ b/test/MUXControlsTestApp/TAEF/MUXControlsTestApp.TAEF.csproj
@@ -12,6 +12,9 @@
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+  </PropertyGroup>
   <ItemGroup>
     <AppxManifest Include="Package.VS.appxmanifest">
       <SubType>Designer</SubType>
